--- a/admin/config.yml
+++ b/admin/config.yml
@@ -44,5 +44,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Permalink", name: "permalink", widget: "string"}
       - {label: "Foto", name: "hero-image", widget: "image"}
-      - {label: "In LEES OOK lijstje tonen?", name: "include-in-other-pages", widget: "boolean"}
+      - {label: "In LEES OOK lijstje tonen?", name: "include-in-other-pages-list", widget: "boolean"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
