--- a/admin/config.yml
+++ b/admin/config.yml
@@ -41,8 +41,8 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Description", name: "description", widget: "text", required: false}
       - {label: "Permalink", name: "permalink", widget: "string"}
-      - {label: "Foto", name: "hero-image", widget: "image"}
+      - {label: "Foto", name: "hero-image", widget: "image", required: false}
       - {label: "In LEES OOK lijstje tonen?", name: "include-in-other-pages-list", widget: "boolean"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
