--- a/admin/config.yml
+++ b/admin/config.yml
@@ -44,6 +44,7 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Description", name: "description", widget: "text", required: false}
       - {label: "Permalink", name: "permalink", widget: "string"}
       - {label: "Grote foto bovenaan", name: "hero-image", widget: "image", required: false}
+      - {label: "Tekst over de grote foto heen", name: "hero-slogan", widget: "image", required: false}
       - {label: "In menu tonen?", name: "include-in-menu", widget: "boolean"}
       - {label: "In 'LEES OOK' lijstje tonen?", name: "include-in-other-pages-list", widget: "boolean"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
