--- a/admin/config.yml
+++ b/admin/config.yml
@@ -9,27 +9,7 @@ media_folder: "_site/uploads" # Folder where user uploaded files should go
 public_folder: "/uploads"
 
 collections: # A list of collections the CMS should be able to edit
-  # POSTS
-  - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Post" # Used in the UI, ie.: "New Post"
-    folder: "_posts" # The path to the folder where the documents are stored
-    sort: "date:desc" # Default is title:asc
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    fields: # The fields each document in this collection have
-      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
-      - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - label: "Author"
-        name: "author"
-        widget: "select"
-        options:
-          - { label: "Dan Urbanowicz", value: "dan_urbanowicz" }
-          - { label: "John Doe", value: "john_doe" }
-      - {label: "Publish Date", name: "date", widget: "datetime", format: "YYYY-MM-DD HH:mm:ss"}
-      - {label: "Intro Paragraph", name: "intro_paragraph", widget: "markdown", required: false}
-      - {label: "Body", name: "body", widget: "markdown", required: false}
-      - {label: "Categories", name: "categories", widget: "string", required: false}
-    # PAGES
+  # PAGES
   - name: "page"
     label: "Page"
     folder: "pages"
@@ -40,11 +20,12 @@ collections: # A list of collections the CMS should be able to edit
     slug: "{{slug}}"
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title (voor in menu)", name: "title", widget: "string"}
+      - {label: "Title tag (belangrijk voor google)", name: "title-tag", widget: "string"}
       - {label: "Description", name: "description", widget: "text", required: false}
       - {label: "Permalink", name: "permalink", widget: "string"}
       - {label: "Grote foto bovenaan", name: "hero-image", widget: "image", required: false}
-      - {label: "Tekst over de grote foto heen", name: "hero-slogan", widget: "image", required: false}
+      - {label: "Tekst over de grote foto heen", name: "hero-slogan", widget: "string", required: false}
       - {label: "In menu tonen?", name: "include-in-menu", widget: "boolean"}
       - {label: "In 'LEES OOK' lijstje tonen?", name: "include-in-other-pages-list", widget: "boolean"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
