--- a/admin/config.yml
+++ b/admin/config.yml
@@ -30,8 +30,8 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "In 'LEES OOK' lijstje tonen?", name: "include-in-other-pages-list", widget: "boolean"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
   # POSTS
-  - name: "post" # Used in routes, ie.: /admin/collections/:slug/edit
-    label: "Post" # Used in the UI, ie.: "New Post"
+  - name: "blog" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Blog" # Used in the UI, ie.: "New Post"
     folder: "_posts" # The path to the folder where the documents are stored
     editor:
       preview: false
