--- a/admin/config.yml
+++ b/admin/config.yml
@@ -43,4 +43,5 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "string"}
       - {label: "Datum (voorbeeld: Woensdag 12 november 2019)", name: "friendly-date", widget: "string"}
+      - {label: "Foto die bij het artikel hoort (die wordt in het overzicht getoond)", name: "image", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
