--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,8 +21,8 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
       - {label: "Title (voor in menu)", name: "title", widget: "string"}
-      - {label: "Title tag (belangrijk voor google)", name: "title-tag", widget: "string"}
-      - {label: "Description", name: "description", widget: "text", required: false}
+      - {label: "Title (belangrijk voor google)", name: "title-tag", widget: "string"}
+      - {label: "Meta (belangrijk voor Google", name: "description", widget: "text", required: false}
       - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "string"}
       - {label: "Grote foto bovenaan", name: "hero-image", widget: "image", required: false}
       - {label: "Tekst over de grote foto heen", name: "hero-slogan", widget: "string", required: false}
