--- a/admin/config.yml
+++ b/admin/config.yml
@@ -28,6 +28,20 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Tekst over de grote foto heen", name: "hero-slogan", widget: "string", required: false}
       - {label: "In menu tonen?", name: "include-in-menu", widget: "boolean", required: false}
       - {label: "Body", name: "body", widget: "markdown", required: false}
+    files:
+      - name: "contact"
+        label: "Contact"
+        file: "/pages/contact.html"
+        fields:
+          - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
+          - {label: "Title (voor in menu)", name: "title", widget: "string"}
+          - {label: "Title (belangrijk voor google)", name: "title-tag", widget: "string"}
+          - {label: "Meta (belangrijk voor Google", name: "description", widget: "text", required: false}
+          - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "string"}
+          - {label: "Grote foto bovenaan", name: "hero-image", widget: "image", required: false}
+          - {label: "Tekst over de grote foto heen", name: "hero-slogan", widget: "string", required: false}
+          - {label: "In menu tonen?", name: "include-in-menu", widget: "boolean", required: false}
+          - {label: "Body", name: "body", widget: "markdown", required: false}     
   # POSTS
   - name: "blog" # Used in routes, ie.: /admin/collections/:slug/edit
     label: "Blog" # Used in the UI, ie.: "New Post"
