--- a/admin/config.yml
+++ b/admin/config.yml
@@ -72,7 +72,8 @@ collections: # A list of collections the CMS should be able to edit
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields: # The fields each document in this collection have
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-      - {label: "Title", name: "title", widget: "string", tagname: "h1"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met ' - Kiann Kindercoaching')", name: "title-tag", widget: "string"}
       - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "string"}
       - {label: "Datum (voorbeeld: Woensdag 12 november 2019)", name: "friendly-date", widget: "string"}
       - {label: "Foto die bij het artikel hoort (die wordt in het overzicht getoond)", name: "image", widget: "image"}
