--- a/admin/config.yml
+++ b/admin/config.yml
@@ -21,7 +21,7 @@ collections: # A list of collections the CMS should be able to edit
         fields:
           - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
           - {label: "Title (voor in menu)", name: "title", widget: "string"}
-          - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met ' - Kiann Kindercoaching')", name: "title-tag", widget: "string"}
+          - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met - Kiann Kindercoaching)", name: "title-tag", widget: "string"}
           - {label: "Meta (belangrijk voor Google", name: "description", widget: "text", required: false}
           - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "hidden", default: '/'}
           - {label: "Grote foto bovenaan", name: "hero-image", widget: "image", required: false}
@@ -34,7 +34,7 @@ collections: # A list of collections the CMS should be able to edit
         fields:
           - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
           - {label: "Title (voor in menu)", name: "title", widget: "string"}
-          - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met ' - Kiann Kindercoaching')", name: "title-tag", widget: "string"}
+          - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met - Kiann Kindercoaching)", name: "title-tag", widget: "string"}
           - {label: "Meta (belangrijk voor Google", name: "description", widget: "text", required: false}
           - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "string"}
           - {label: "Grote foto bovenaan", name: "hero-image", widget: "image", required: false}
@@ -53,7 +53,7 @@ collections: # A list of collections the CMS should be able to edit
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "default"}
       - {label: "Title (voor in menu)", name: "title", widget: "string"}
-      - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met ' - Kiann Kindercoaching')", name: "title-tag", widget: "string"}
+      - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met - Kiann Kindercoaching)", name: "title-tag", widget: "string"}
       - {label: "Meta (belangrijk voor Google", name: "description", widget: "text", required: false}
       - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "string"}
       - {label: "Grote foto bovenaan", name: "hero-image", widget: "image", required: false}
@@ -73,7 +73,7 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met ' - Kiann Kindercoaching')", name: "title-tag", widget: "string"}
+      - {label: "Title (belangrijk voor google, wordt automatisch aangevuld met - Kiann Kindercoaching)", name: "title-tag", widget: "string"}
       - {label: "Meta (belangrijk voor Google", name: "description", widget: "text", required: false}
       - {label: "URL (het deel achter https://kiannkindercoaching.nl/) (alleen letters, nummers en min tekens toegestaan)", name: "permalink", widget: "string"}
       - {label: "Datum (voorbeeld: Woensdag 12 november 2019)", name: "friendly-date", widget: "string"}
